--- a/deng/css/style.css
+++ b/deng/css/style.css
@@ -1,6 +1,7 @@
 body{
 	margin: 0;
 	padding:0;
+	font-family: Arial;
 }
 
 .photos{
@@ -35,12 +36,12 @@ background: -webkit-linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,0));   /*Safa
 background: -o-linear-gradient(top, rgba(0,0,0,1),rgba(0,0,0,0));  /*Opera 11.10+*/
 
 } 
-ul, ol { padding: 0;margin: 0}
+ul,ol{ padding: 0;margin: 0}
 .banner { position: relative; overflow: auto; text-align: center;}
 .banner li { list-style: none; }
 .banner ul li { float: left; }
 #b04 { width: 100%;}
-#b04 .dots { position: absolute; left: 0; right: 0; bottom: 1%;}
+#b04 .dots { position: absolute; left: 0; right: 0; bottom: 5%;}
 #b04 .dots li 
 { 
     display: inline-block; 
@@ -61,7 +62,7 @@ ul, ol { padding: 0;margin: 0}
     background: #fff;
     opacity: 1;
 }
-#b04 .arrow { position: absolute; top: 40%;}
+#b04 .arrow { position: absolute; top: 50%;}
 #b04 #al { left: 0px;}
 #b04 #ar { right: 0px;}
 
@@ -77,9 +78,8 @@ ul, ol { padding: 0;margin: 0}
 #headerright{
 	height: 100%;
 	position: absolute;
-	margin-right: 5%;
 	z-index: 90;
-	color: white;
+	color: #ddd;
 	right: 5%;
 	top: 15%;
 }
@@ -93,8 +93,20 @@ ul, ol { padding: 0;margin: 0}
 	float: right;
 	position: relative;
     padding-left: 20px;
-    padding-top: 10%;
+    padding-top: 20%;
     font-size: 20px;
+}
+
+#headerright a:link{
+	color: #ddd;
+	text-decoration: none;
+}
+
+#headerright a:visited{
+	color: #ddd;
+}
+#headerright a:hover{
+	color: white;
 }
 
 #bar2{
@@ -105,30 +117,171 @@ ul, ol { padding: 0;margin: 0}
 	top: 100px;
 	z-index: 110;
 	transition: 0.1s;
-	background-color: rgba(49,60,85,0.8);
+	background-color: rgb(49,60,85);
 }
 
-#bar2 li{
-	position: relative;
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	list-style: none;
-	color: white;
-	font-size: 20px;
-}
-#bar2 ul{
-	height: 100%;
-}
 .bar2list:hover{
     background-color: rgba(73,83,108,0.8);
 }
 
 .bar2list{
 	height: 100%;
-	float: left;
-	position: relative;
+	width: 100%;
 }
-#changemargin{
-	transition: 0.1s;
+#bar2 table{
+	color: white;
+	height: 100%;
+	margin-left: 5%;
+}
+
+#bar2 th:hover{
+	background-color: rgb(73,83,108);
+}
+
+#bar2 th{
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.imgcontainer{
+	width: 100%;
+	height: auto;
+}
+
+.absolute{
+	position: absolute;
+	top: 50%;
+}
+
+th a{
+	display: block;
+	width: 100%;
+	height: 40px;
+	line-height: 42px;
+	font-size: 10px;
+}
+
+th a:link{
+	text-decoration: none;
+	color: white;
+}
+
+th a:visited{
+	color: white;
+}
+
+#phoneheader{
+	position: fixed;
+	width: 100%;
+	height: 50px;
+	background-color: rgb(49,60,85);
+	display: none;
+	z-index: 10;
+}
+
+#imgholder{
+	height: 70%;
+	margin-top: 15%;
+}
+
+#phonetitle{
+	top: 15px;
+	position: fixed;
+	color: white;
+	margin: 0 auto;
+	right: 13%;
+}
+
+@media(max-width: 320px){
+	#phonetitle{
+		right: 5%;
+	}
+}
+
+#phonebarbackground{
+	position: fixed;
+	background-color: rgba(0,0,0,0.7);
+	height: 100%;
+	width: 100%;
+	transition: 1s;
+	display: none;
+	z-index: 200;
+}
+
+#phonebar{
+	position: fixed;
+	background-color: rgb(49,60,85);
+	width: 200px;
+	z-index: 300;
+	height: 100%;
+	transition: 0.5s;
+	left: -200px;
+}
+
+#phonebarheader{
+	position: fixed;
+	top: 0;
+	width: 200px;
+	text-align: center;
+	color: white;
+	height: 50px;
+	z-index: 100;
+}
+#headerh2{
+	margin: 13px;
+}
+
+#register{
+	background-color: rgb(256,156,0);
+}
+
+#phonebar a:link{
+	text-decoration: none;
+}
+
+@media(max-width: 767px){
+	#bar2, .header{
+		display: none;
+	}
+}
+
+@media(max-width: 767px){
+	#phoneheader{
+		display: block;
+	}
+}
+
+@media(max-width: 767px){
+	#b04{
+		top: 50px;
+	}
+}
+
+@media(max-width: 767px){
+	#b04 .arrow{
+		top: 40%;
+	}
+}
+
+#phonebar table{
+	color: white;
+	margin-top: 50px;
+	width: 100%;
+}
+
+#phonebar th{
+	background-color: rgb(256,156,0);
+}
+
+#phonebar a:link{
+	color: white;
+	font-size: 18px;
+}
+
+#phonebar a:visited{
+	color: white;
+}
+
+#phonebar td{
+	padding-left: 35px;
 }
