--- a/deng/css/style.css
+++ b/deng/css/style.css
@@ -62,9 +62,9 @@ ul,ol{ padding: 0;margin: 0}
     background: #fff;
     opacity: 1;
 }
-#b04 .arrow { position: absolute; top: 50%;}
-#b04 #al { left: 0px;}
-#b04 #ar { right: 0px;}
+#b04 .arrow { position: absolute; top: 40%;}
+#b04 #al { left: 5%;}
+#b04 #ar { right: 5%;}
 
 #headerleft{
 	height: 100%;
@@ -248,11 +248,6 @@ th a:visited{
 	}
 }
 
-@media(max-width: 767px){
-	#b04 .arrow{
-		top: 40%;
-	}
-}
 
 #phonebar table{
 	color: white;
