change Homepage Text

--- a/wu/assets/css/gsdk.css
+++ b/wu/assets/css/gsdk.css
@@ -69,7 +69,7 @@ body {
   font-family: "HelveticaNeueLT Pro 75 Bd","Open Sans",Arial,sans-serif; }
 
 .main {
-  background-color: #FFFFFF;
+  background-color: #212121;
   position: relative; }
 
 a {
