--- a/wu/assets/css/demo.css
+++ b/wu/assets/css/demo.css
@@ -312,14 +312,14 @@
 .blurred-container{
   position:relative;
   width:100%;
-  height:800px;
+  height:600px;
   top:0;
   left:0;
 }
 .blurred-container > .img-src{
     position:fixed;
     width:100%;
-    height:800px;
+    height:600px;
     background-repeat:no-repeat;
     background-size:cover;
     background-position: center center;
@@ -404,11 +404,18 @@
     border-radius: 0%;
     float: left;
     position: absolute;
-    width: 20%;
-    height: 20%;
     margin-left: 13%;
     top: -30%;
+    left: 0%;
 }
 .text-container .text img{
     width: 100%;
+}
+
+.words{
+    font-size: 48px;
+    color: #EEEEEE;
+    font-family:"Source Han Sans CN","Pingfang","MicrosoftJhengHei",STHeiti,MingLiu;
+    font-family:"Helvetica Neue",Arial,Sans-Serif;
+    line-height: 52px;
 }
