--- a/wu/assets/css/demo.css
+++ b/wu/assets/css/demo.css
@@ -416,6 +416,6 @@
     font-size: 48px;
     color: #EEEEEE;
     font-family:"Source Han Sans CN","Pingfang","MicrosoftJhengHei",STHeiti,MingLiu;
-    font-family:"Helvetica Neue",Arial,Sans-Serif;
+    font-family:"product sans","Helvetica Neue",Arial,Sans-Serif;
     line-height: 52px;
 }
