--- a/cybergame/css/style.css
+++ b/cybergame/css/style.css
@@ -3,7 +3,17 @@ body{
 	padding:0;
     font-family:"product sans","Helvetica Neue",Arial,Sans-Serif;
 }
+@font-face {
+    font-family: 'product_sansregular';
+    src: url('product_sans-webfont.eot');
+    src: url('product_sans-webfont.eot?#iefix') format('embedded-opentype'),
+         url('product_sans-webfont.woff2') format('woff2'),
+         url('product_sans-webfont.woff') format('woff'),
+         url('product_sans-webfont.svg#product_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 .photos{
 	margin: 0;
 	padding:0;
