--- a/cybergame/css/style.css
+++ b/cybergame/css/style.css
@@ -2,6 +2,7 @@ body{
 	margin: 0;
 	padding:0;
     font-family:"product sans","Helvetica Neue",Arial,Sans-Serif;
+    overflow-x: hidden;
 }
 @font-face {
     font-family: 'product_sansregular';
@@ -229,7 +230,7 @@ th a:visited{
 	width: 200px;
 	z-index: 300;
 	height: 100%;
-	transition: 0.5s;
+	transition: 0.4s;
 	left: -200px;
 	overflow: auto;
 }
@@ -258,9 +259,9 @@ th a:visited{
 	}
 }
 
-@media(max-width: 767px){
+@media(min-width: 767px){
 	#b04{
-		top: 50px;
+		top: -50px;
 	}
 }
 
@@ -285,4 +286,9 @@ th a:visited{
 
 #phonebar td{
 	padding-left: 35px;
+}
+
+#blank{
+    height: 50px;
+    width: 100%;
 }
