--- a/cybergame/hearthstone/css/style.css
+++ b/cybergame/hearthstone/css/style.css
@@ -41,7 +41,6 @@ body{
     background-color: rgba(0,0,0,0.7);
     height: 100%;
     width: 100%;
-    transition: 1s;
     display: none;
     z-index: 200;
 }
@@ -52,7 +51,7 @@ body{
     width: 200px;
     z-index: 300;
     height: 100%;
-    transition: 0.4s;
+    transition: 0.3s ease-out;
     left: -200px;
     overflow: auto;
 }
@@ -139,7 +138,7 @@ body{
 
 #upload{
     position: absolute;
-    top: 30%;
+    top: 15%;
     left: 0;
     right: 0;
     margin: auto;
