--- a/cybergame/css/style.css
+++ b/cybergame/css/style.css
@@ -95,8 +95,9 @@ ul,ol{ padding: 0;margin: 0}
 	top: 15%;
 }
 
-#cst{
+#cst b{
 	font-size: 40px;
+	margin-top: -10px;
 }
 
 #headerright li{
@@ -329,6 +330,6 @@ th a:visited{
 	color: white;
 }
 
-#spanli:hover{
+.spanli:hover{
 	background-color: rgba(73,83,108,0.8);
 }
