--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -105,7 +105,7 @@ font-face
 .txt-gray{
     color: #ddd !important;
 }
-.footer{
+/*.footer{
     background-color: #DDDDDD;
     background-image: url('../img/cover_4_blur.jpg');
     background-attachment: fixed;
@@ -126,7 +126,7 @@ font-face
 }
 .footer .credits a{
     color: #FFFFFF;
-}
+}*/
 .social-share{
     float: left;
     margin-right: 8px;
@@ -420,11 +420,12 @@ font-face
     line-height: 52px;
 }
 
-.grayfooter{
-    width: 100%;
-    height: 100px;
-    background-color: #000000;
-}
-.footerword{
-    color: #ffffff;
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
