--- a/cybergame/css/style.css
+++ b/cybergame/css/style.css
@@ -186,6 +186,14 @@ th a:visited{
 	z-index: 10;
 }
 
+.phoneheader{
+	position: fixed;
+	width: 100%;
+	height: 50px;
+	background-color: rgb(49,60,85);
+	z-index: 10;
+}
+
 #imgholder{
 	height: 70%;
 	margin-top: 15%;
@@ -197,6 +205,17 @@ th a:visited{
 	color: white;
 	margin: 0 auto;
 	right: 13%;
+}
+
+.phonetitle1{
+	top: 12px;
+	position: absolute;
+	color: white;
+	margin: 0 auto;
+	text-align: center;
+	left: 0;
+	right: 0;
+	z-index: 1;
 }
 
 @media(max-width: 320px){
@@ -215,12 +234,25 @@ th a:visited{
 		right: 31%;
 	}
 }
+
+@media(min-width: 1024px){
+	.phoneheader{
+		width: 768px;
+	}
+}
 #phonebarbackground{
 	position: fixed;
 	background-color: rgba(0,0,0,0.7);
 	height: 100%;
 	width: 100%;
-	transition: 1s;
+	display: none;
+	z-index: 200;
+}
+#pcbackground{
+	position: fixed;
+	background-color: rgba(0,0,0,0.7);
+	height: 100%;
+	width: 100%;
 	display: none;
 	z-index: 200;
 }
@@ -266,6 +298,11 @@ th a:visited{
 	}
 }
 
+@media (max-width: 1023px) {
+	body{
+		background-color: #eee;
+	}
+}
 
 #phonebar table{
 	color: white;
@@ -327,4 +364,114 @@ th a:visited{
 
 .spanli:hover{
 	background-color: rgba(73,83,108,0.8);
+}
+
+.maingame{
+	width:100%;
+    text-align: center;
+}
+
+.introboxcontent{
+	width: 80%;
+	margin-left: 10%;
+	padding-top: 60px;
+	padding-bottom: 30px;
+}
+.introbox{
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	margin-top: 20px;
+	width:90%;
+	background-color: #fff;
+	transition: 0.3s;
+}
+
+.detailbox{
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	background-color: white;
+	overflow: auto;
+	z-index: 300;
+	left: 0;
+	right:0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	display: none;
+}
+
+@media (min-width: 1024px) {
+	.detailbox{
+		width:768px;
+		height:600px;
+	}
+}
+
+.imgstyle{
+	position: absolute;
+	z-index:2;
+	height: 100%;
+}
+
+.imgstyle1{
+	width: 80%;
+	margin-left: 10%;
+}
+
+@media (min-width: 1024px) {
+	.introbox{
+		width: 31%;
+		margin-top: 40px;
+		margin-bottom: 40px;
+	}
+}
+.shadow{
+	box-shadow: 0px 1px 1px #999;
+}
+
+.flowleft{
+	margin-left: 0;
+}
+.flowright{
+	margin-left: 0;
+}
+@media (min-width: 1024px){
+	.flowleft{
+		float: left;
+		margin-left: 6%;
+	}
+}
+@media (min-width: 1024px){
+	.flowright{
+		float: right;
+		margin-right: 6%;
+	}
+}
+
+.introbox:hover{
+	box-shadow: 0px 5px 20px #999;
+}
+
+.left{
+	text-align: left;
+	font-family: "Microsoft YaHei";
+}
+
+.spanleft{
+	text-align: left;
+	font-family: "Microsoft YaHei";
+	font-size: 14px;
+	padding-top: 10px;
+}
+@media (min-width: 1024px) {
+	.maingame{
+		padding-top: 50px;
+	}
+}
+
+.clearfix{
+	overflow: hidden;
 }
