--- a/cybergame/css/style.css
+++ b/cybergame/css/style.css
@@ -579,3 +579,13 @@ span{/*use in timetable*/
 .timetable p{
 	text-align: center;
 }
+
+.buttonstyle{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0);
+	border: 0;
+	color: white;
+	font-size: 18px;
+	font-family: "Microsoft YaHei";
+}
