--- a/homepagetwopointo/assets/css/style.css
+++ b/homepagetwopointo/assets/css/style.css
@@ -46,9 +46,10 @@ a.buttonstyle:hover{
     position: absolute;
 }
 .head-img{
-    max-width: 100%;
+    width: 100%;
     margin:0;
     padding:0;
+
 }
 .main{
     color: #ffffff;
