--- a/cybergame/css/style.css
+++ b/cybergame/css/style.css
@@ -242,19 +242,19 @@ th a:visited{
 }
 #phonebarbackground{
 	position: fixed;
-	background-color: rgba(0,0,0,0.7);
+	background-color: rgba(0,0,0,0);
 	height: 100%;
 	width: 100%;
-	display: none;
-	z-index: 200;
+	z-index: -1;
+	transition: 0.2s;
 }
 #pcbackground{
 	position: fixed;
-	background-color: rgba(0,0,0,0.7);
+	background-color: rgba(0,0,0,0);
 	height: 100%;
 	width: 100%;
-	display: none;
-	z-index: 200;
+	transition: 0.2s;
+	z-index: -1;
 }
 
 #phonebar{
@@ -398,16 +398,18 @@ th a:visited{
 	z-index: 300;
 	left: 0;
 	right:0;
-	top: 0;
+	top: 100px;
 	bottom: 0;
 	margin: auto;
 	display: none;
+	transition: 0.2s;
 }
 
 @media (min-width: 1024px) {
 	.detailbox{
 		width:768px;
 		height:600px;
+		top: 1000px;
 	}
 }
 
@@ -415,8 +417,20 @@ th a:visited{
 	position: absolute;
 	z-index:2;
 	height: 100%;
+	transition: 0.2s;
 }
-
+.imgstyle:hover{
+	transform:rotate(90deg);
+	-ms-transform:rotate(90deg); /* Internet Explorer */
+	-moz-transform:rotate(90deg); /* Firefox */
+	-webkit-transform:rotate(90deg);
+}
+.trans{
+	transform:rotate(180deg);
+	-ms-transform:rotate(180deg); /* Internet Explorer */
+	-moz-transform:rotate(180deg); /* Firefox */
+	-webkit-transform:rotate(180deg);
+}
 @media (min-width: 1024px) {
 	.introbox{
 		width: 90%;
