--- a/homepage/assets/css/demo.css
+++ b/homepage/assets/css/demo.css
@@ -36,9 +36,10 @@ font-face
 .switch{
     margin-right: 20px;
 }
-#navbar-full .navbar{
+#navbar-full{
     border-radius: 0 !important;
     margin-bottom: 0;
+    background-color: #000000 !important;
 }
 .navigation-example{
     margin-top: 0px;
@@ -310,11 +311,12 @@ font-face
 /* @cristina: fisier singular, folosit pentru efectul de blur la parallax in header */
 
 .blurred-container{
-  position:relative;
+  position: inherit;
   width:100%;
   height:600px;
   top:0;
   left:0;
+  background-color: #000000;
 }
 .blurred-container > .img-src{
     position:fixed;
@@ -328,9 +330,6 @@ font-face
   opacity:0;
 }
 
-.logo-container{
-    margin-top: 10px;
-}
 .logo-container .logo{
     overflow: hidden;
     border-radius: 0%;
@@ -393,6 +392,7 @@ font-face
 .img-dog{
     display: inline-block;
     margin-bottom: 25px;
+    max-width: 100%;
 }
 
 
@@ -429,4 +429,7 @@ font-face
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+}
+.topback{
+    background-color: #000000;
 }
