--- a/homepage_old/assets/css/demo.css
+++ b/homepage_old/assets/css/demo.css
@@ -430,3 +430,16 @@
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+
+.typed-fade-out{
+    opacity: 0;
+    animation: 0;
+    transition: opacity .25s;
+}
